--- a/Code/app/src/main/res/values/strings.xml
+++ b/Code/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
         <item>description saucisson</item>
         <item>description salade</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
